--- a/TH1.html
+++ b/TH1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thực hành số 1</title>
 </head>
-<link rel="stylesheet" href="./assets/css/TH1.css">
+<link rel="stylesheet" href="./css/TH1.css">
 <link rel="stylesheet" href="./assets/font/themify-icons/themify-icons.css">
 <body>
     <!-- 
